@@ -31,6 +31,8 @@ Post-v2.8.0
      * All the netdev-dpdk appctl commands described in ovs-vswitchd man page.
    - vswitchd:
      * Datapath IDs may now be specified as 0x1 (etc.) instead of 16 digits.
+     * Configuring a controller, or unconfiguring all controllers, now deletes
+       all groups and meters (as well as all flows).
 
 v2.8.0 - 31 Aug 2017
 --------------------
